# tracing-human-layer

./: .envrc  Cargo.toml  README.md  flake.nix
.config/: nextest.toml
.github/workflows/: label-prs.yaml  release.yaml  version.yaml
benches/: format_event.rs
examples/: demo.rs
src/: color.rs  event.rs  fields.rs  layer.rs  lib.rs  output_stream.rs  span_fields.rs  span_info.rs  style.rs  textwrap.rs
test-harness/: Cargo.toml
test-harness/src/: lib.rs
tests/: basic.rs  color.rs  output_stream.rs  test.rs  wrap.rs
