[package]
name = "tracing-human-layer"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
owo-colors = { version = "3.5.0", features = ["supports-color", "supports-colors"] }
textwrap = { version = "0.16.0", features = ["terminal_size"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dev-dependencies]
expect-test = "1.4.1"
indoc = "2.0.4"
